# Branch-your-LLM

./: README.md  docker-compose.yml
backend/: Dockerfile  chat.db  database.py  main.py  ollama_client.py  pyproject.toml  requirements.txt  schemas.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ChatInterface.tsx  GraphView.tsx  MessageBubble.tsx  Sidebar.tsx  SplitView.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
