[project]
name = "multiverse-chat"
version = "1.0.0"
description = "Chat is a Tree, not a Line - A branching conversation engine for Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
